--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -46,7 +46,7 @@ regexp("^https://(forum|forums)\\.(gitlab|ionicframework|woot|urbackup|swift|met
 regexp("^https://(docs|forums)\.spongepowered\.org/(?!embed/comments).*$"),
 regexp("^https://(meta|talk)\.(discourse|commonmark)\.org/(?!embed/comments).*$"),
 regexp("^https://discuss\\.(rubyonrails|atom|codemirror|elastic|flexget|huel|ocaml|cocos2d-x)\\.(io|org|co|com|net)/(?!embed/comments).*$"),
-regexp("^https://(forum|forums)\.(syncthing|habitat|puri|sonarr|cfx|monnaie-libre)\.(net|sh|sm|tv|re|fr)/(?!embed/comments).*$"),
+regexp("^https://(forum|forums)\.(syncthing|habitat|puri|sonarr|cfx|monnaie-libre|crystal-lang)\.(org|net|sh|sm|tv|re|fr)/(?!embed/comments).*$"),
 regexp("^https://(\w+\.ruby-forum|zegist)\.com/(?!embed/comments).*$"),
 regexp("^https://nomadlist.com/(?!embed/comments).*$"),
 regexp("^https://github.community/(?!embed/comments).*$"),
